2007-03-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefieldmmff94.cpp: Switch pow() to use
	doubles to prevent compile problems on older Linux/GCC systems.

	* src/logp.cpp, src/psa.cpp: Switch to use OpenDatafile() call.

	* include/openbabel/Makefile.am: Make sure to include psa.h and
	logp.h in distribution.

	* src/data.cpp: Move comments to provide better documentation for
	OpenDatafile.

	* config.sub, config.guess, configure, Makefile.* Update with
	automake-1.10 and autoconf-2.61.

2007-03-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* tool/obminimize.cpp: added '-sd', '-cg', '-c criteria' options

	* doc/obminimize.1: update for added options (man pages for obenergy
	and obminimize are also on wiki now) 

2007-03-12  Geoffrey Hutchison  <babel@geoffhutchison.net>	

	* src/formats/mopacformat.cpp: Added patch #1676963
	for MOPAC 2007 output format. Thanks to 'dn2010.'
	(Daniil Bratashov). Solves PR#1654907.

	* src/formats/qchemformat.cpp: Added support for keywords.

	* src/formats/acrformat.cpp: New format, contributed by Daniel
	Mansfield.

	* src/formats/Makefile.am, src/formats/Makefile.in: Add acrformat.

	* src/formats/gaussformat.cpp: Add feature to write bonds,
	contributed by Daniel Mansfield.

	* src/formats/fchkformat.cpp: Add initial support from Maxim
	Fedorovsky. (Maxim's contribution also supported vibrational data
	using Eigen and matrix operations.)

	* include/openbabel/generic.h, src/generic.cpp: Include
	OBVibrationData class (even if the matrix operations to use it
	aren't in Open Babel yet).

	* tools/obprop.cpp: Additional properties, including canonical
	SMILES and InChI. Fixes request PR#1620842.

	* THANKS: Work on updates for 2.1 release.

	* NEWS: Likewise.

2007-03-11 Chris Morley
	
	* src/data/atomtyp.h: Aggressive simplification of 
	IMPVAL for oxygen and new value for Si. Read and test with
	/test/files/FormulaTest.smi. Solves bugs 1635901 and
	1474930
	