@@ -1,3 +1,7 @@
+2007-03-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* src/forcefields/forcefieldghemical.cpp: Fix 1,4-scaling problem.
+
 2007-03-13  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/forcefields/forcefieldmmff94.cpp: Switch pow() to use
